gpsl/src/grammar/.antlr/GpslParser.java
// Generated from h:\Git\gpsl\src\grammar\GpslParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GpslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, ADD=2, SUB=3, MUL=4, DIV=5, CONJ=6, AND=7, EQ=8, EQEQ=9, NE=10, 
		BE=11, LE=12, BT=13, LT=14, SEMICOLON=15, COLON=16, COMMA=17, DOT=18, 
		QUOTE=19, ADD_ASSIGNMENT=20, SUB_ASSIGNMENT=21, MUL_ASSIGNMENT=22, DIV_ASSIGNMENT=23, 
		LPAREN=24, RPAREN=25, LCURL=26, RCURL=27, ARROW=28, FN=29, FOR=30, WHILE=31, 
		IF=32, ELSE=33, LET=34, RETURN=35, NUM=36, TEXT=37, IDENT=38;
	public static final int
		RULE_gpslFile = 0, RULE_function = 1, RULE_program = 2, RULE_stmt = 3, 
		RULE_let = 4, RULE_block = 5, RULE_return = 6, RULE_if = 7, RULE_while = 8, 
		RULE_for = 9, RULE_expr = 10, RULE_assign = 11, RULE_equality = 12, RULE_relational = 13, 
		RULE_add = 14, RULE_mul = 15, RULE_primary = 16, RULE_function_call = 17, 
		RULE_unary = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"gpslFile", "function", "program", "stmt", "let", "block", "return", 
			"if", "while", "for", "expr", "assign", "equality", "relational", "add", 
			"mul", "primary", "function_call", "unary"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'+'", "'-'", "'*'", "'/'", "'&&'", "'&'", "'='", "'=='", 
			"'!='", "'>='", "'<='", "'>'", "'<'", "';'", "':'", "','", "'.'", "'\"'", 
			"'+='", "'-='", "'*='", "'/='", "'('", "')'", "'{'", "'}'", "'->'", "'fn'", 
			"'for'", "'while'", "'if'", "'else'", "'let'", "'return'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "ADD", "SUB", "MUL", "DIV", "CONJ", "AND", "EQ", "EQEQ", 
			"NE", "BE", "LE", "BT", "LT", "SEMICOLON", "COLON", "COMMA", "DOT", "QUOTE", 
			"ADD_ASSIGNMENT", "SUB_ASSIGNMENT", "MUL_ASSIGNMENT", "DIV_ASSIGNMENT", 
			"LPAREN", "RPAREN", "LCURL", "RCURL", "ARROW", "FN", "FOR", "WHILE", 
			"IF", "ELSE", "LET", "RETURN", "NUM", "TEXT", "IDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GpslParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GpslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class GpslFileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GpslParser.EOF, 0); }
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public GpslFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gpslFile; }
	}

	public final GpslFileContext gpslFile() throws RecognitionException {
		GpslFileContext _localctx = new GpslFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_gpslFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FN) {
				{
				{
				setState(38);
				function();
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(44);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode FN() { return getToken(GpslParser.FN, 0); }
		public List<TerminalNode> IDENT() { return getTokens(GpslParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(GpslParser.IDENT, i);
		}
		public TerminalNode LPAREN() { return getToken(GpslParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(GpslParser.RPAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<TerminalNode> COLON() { return getTokens(GpslParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(GpslParser.COLON, i);
		}
		public TerminalNode ARROW() { return getToken(GpslParser.ARROW, 0); }
		public List<TerminalNode> COMMA() { return getTokens(GpslParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GpslParser.COMMA, i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(FN);
			setState(47);
			match(IDENT);
			setState(48);
			match(LPAREN);
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(49);
				match(IDENT);
				setState(50);
				match(COLON);
				setState(51);
				match(IDENT);
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(52);
					match(COMMA);
					}
				}

				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			match(RPAREN);
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ARROW) {
				{
				setState(61);
				match(ARROW);
				setState(62);
				match(IDENT);
				}
			}

			setState(65);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADD) | (1L << SUB) | (1L << LPAREN) | (1L << LCURL) | (1L << FOR) | (1L << WHILE) | (1L << IF) | (1L << LET) | (1L << RETURN) | (1L << NUM) | (1L << TEXT) | (1L << IDENT))) != 0)) {
				{
				{
				setState(67);
				stmt();
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public LetContext let() {
			return getRuleContext(LetContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ReturnContext return() {
			return getRuleContext(ReturnContext.class,0);
		}
		public IfContext if() {
			return getRuleContext(IfContext.class,0);
		}
		public WhileContext while() {
			return getRuleContext(WhileContext.class,0);
		}
		public ForContext for() {
			return getRuleContext(ForContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GpslParser.SEMICOLON, 0); }
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stmt);
		try {
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LET:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				let();
				}
				break;
			case LCURL:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				block();
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				return();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 4);
				{
				setState(76);
				if();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 5);
				{
				setState(77);
				while();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 6);
				{
				setState(78);
				for();
				}
				break;
			case ADD:
			case SUB:
			case LPAREN:
			case NUM:
			case TEXT:
			case IDENT:
				enterOuterAlt(_localctx, 7);
				{
				setState(79);
				expr();
				setState(80);
				match(SEMICOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LetContext extends ParserRuleContext {
		public TerminalNode LET() { return getToken(GpslParser.LET, 0); }
		public List<TerminalNode> IDENT() { return getTokens(GpslParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(GpslParser.IDENT, i);
		}
		public TerminalNode COLON() { return getToken(GpslParser.COLON, 0); }
		public TerminalNode SEMICOLON() { return getToken(GpslParser.SEMICOLON, 0); }
		public LetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_let; }
	}

	public final LetContext let() throws RecognitionException {
		LetContext _localctx = new LetContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_let);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(LET);
			setState(85);
			match(IDENT);
			setState(86);
			match(COLON);
			setState(87);
			match(IDENT);
			setState(88);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LCURL() { return getToken(GpslParser.LCURL, 0); }
		public TerminalNode RCURL() { return getToken(GpslParser.RCURL, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(LCURL);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADD) | (1L << SUB) | (1L << LPAREN) | (1L << LCURL) | (1L << FOR) | (1L << WHILE) | (1L << IF) | (1L << LET) | (1L << RETURN) | (1L << NUM) | (1L << TEXT) | (1L << IDENT))) != 0)) {
				{
				{
				setState(91);
				stmt();
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			match(RCURL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(GpslParser.RETURN, 0); }
		public TerminalNode SEMICOLON() { return getToken(GpslParser.SEMICOLON, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return; }
	}

	public final ReturnContext return() throws RecognitionException {
		ReturnContext _localctx = new ReturnContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_return);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(RETURN);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADD) | (1L << SUB) | (1L << LPAREN) | (1L << NUM) | (1L << TEXT) | (1L << IDENT))) != 0)) {
				{
				setState(100);
				expr();
				}
			}

			setState(103);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(GpslParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(GpslParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(GpslParser.RPAREN, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(GpslParser.ELSE, 0); }
		public IfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if; }
	}

	public final IfContext if() throws RecognitionException {
		IfContext _localctx = new IfContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_if);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(IF);
			setState(106);
			match(LPAREN);
			setState(107);
			expr();
			setState(108);
			match(RPAREN);
			setState(109);
			stmt();
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(110);
				match(ELSE);
				setState(111);
				stmt();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(GpslParser.WHILE, 0); }
		public TerminalNode LPAREN() { return getToken(GpslParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(GpslParser.RPAREN, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public WhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while; }
	}

	public final WhileContext while() throws RecognitionException {
		WhileContext _localctx = new WhileContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_while);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(WHILE);
			setState(115);
			match(LPAREN);
			setState(116);
			expr();
			setState(117);
			match(RPAREN);
			setState(118);
			stmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(GpslParser.FOR, 0); }
		public TerminalNode LPAREN() { return getToken(GpslParser.LPAREN, 0); }
		public List<TerminalNode> SEMICOLON() { return getTokens(GpslParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(GpslParser.SEMICOLON, i);
		}
		public TerminalNode RPAREN() { return getToken(GpslParser.RPAREN, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for; }
	}

	public final ForContext for() throws RecognitionException {
		ForContext _localctx = new ForContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_for);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(FOR);
			setState(121);
			match(LPAREN);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADD) | (1L << SUB) | (1L << LPAREN) | (1L << NUM) | (1L << TEXT) | (1L << IDENT))) != 0)) {
				{
				setState(122);
				expr();
				}
			}

			setState(125);
			match(SEMICOLON);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADD) | (1L << SUB) | (1L << LPAREN) | (1L << NUM) | (1L << TEXT) | (1L << IDENT))) != 0)) {
				{
				setState(126);
				expr();
				}
			}

			setState(129);
			match(SEMICOLON);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADD) | (1L << SUB) | (1L << LPAREN) | (1L << NUM) | (1L << TEXT) | (1L << IDENT))) != 0)) {
				{
				setState(130);
				expr();
				}
			}

			setState(133);
			match(RPAREN);
			setState(134);
			stmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			assign();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public EqualityContext equality() {
			return getRuleContext(EqualityContext.class,0);
		}
		public TerminalNode EQ() { return getToken(GpslParser.EQ, 0); }
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_assign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			equality();
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQ) {
				{
				setState(139);
				match(EQ);
				setState(140);
				assign();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqualityContext extends ParserRuleContext {
		public List<RelationalContext> relational() {
			return getRuleContexts(RelationalContext.class);
		}
		public RelationalContext relational(int i) {
			return getRuleContext(RelationalContext.class,i);
		}
		public List<TerminalNode> EQEQ() { return getTokens(GpslParser.EQEQ); }
		public TerminalNode EQEQ(int i) {
			return getToken(GpslParser.EQEQ, i);
		}
		public List<TerminalNode> NE() { return getTokens(GpslParser.NE); }
		public TerminalNode NE(int i) {
			return getToken(GpslParser.NE, i);
		}
		public List<TerminalNode> CONJ() { return getTokens(GpslParser.CONJ); }
		public TerminalNode CONJ(int i) {
			return getToken(GpslParser.CONJ, i);
		}
		public EqualityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equality; }
	}

	public final EqualityContext equality() throws RecognitionException {
		EqualityContext _localctx = new EqualityContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_equality);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			relational();
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONJ) | (1L << EQEQ) | (1L << NE))) != 0)) {
				{
				setState(149);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case EQEQ:
					{
					setState(144);
					match(EQEQ);
					setState(145);
					relational();
					}
					break;
				case NE:
					{
					setState(146);
					match(NE);
					setState(147);
					relational();
					}
					break;
				case CONJ:
					{
					setState(148);
					match(CONJ);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationalContext extends ParserRuleContext {
		public List<AddContext> add() {
			return getRuleContexts(AddContext.class);
		}
		public AddContext add(int i) {
			return getRuleContext(AddContext.class,i);
		}
		public List<TerminalNode> LE() { return getTokens(GpslParser.LE); }
		public TerminalNode LE(int i) {
			return getToken(GpslParser.LE, i);
		}
		public List<TerminalNode> LT() { return getTokens(GpslParser.LT); }
		public TerminalNode LT(int i) {
			return getToken(GpslParser.LT, i);
		}
		public List<TerminalNode> BE() { return getTokens(GpslParser.BE); }
		public TerminalNode BE(int i) {
			return getToken(GpslParser.BE, i);
		}
		public List<TerminalNode> BT() { return getTokens(GpslParser.BT); }
		public TerminalNode BT(int i) {
			return getToken(GpslParser.BT, i);
		}
		public RelationalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relational; }
	}

	public final RelationalContext relational() throws RecognitionException {
		RelationalContext _localctx = new RelationalContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_relational);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			add();
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BE) | (1L << LE) | (1L << BT) | (1L << LT))) != 0)) {
				{
				setState(163);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LE:
					{
					setState(155);
					match(LE);
					setState(156);
					add();
					}
					break;
				case LT:
					{
					setState(157);
					match(LT);
					setState(158);
					add();
					}
					break;
				case BE:
					{
					setState(159);
					match(BE);
					setState(160);
					add();
					}
					break;
				case BT:
					{
					setState(161);
					match(BT);
					setState(162);
					add();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddContext extends ParserRuleContext {
		public List<MulContext> mul() {
			return getRuleContexts(MulContext.class);
		}
		public MulContext mul(int i) {
			return getRuleContext(MulContext.class,i);
		}
		public List<TerminalNode> ADD() { return getTokens(GpslParser.ADD); }
		public TerminalNode ADD(int i) {
			return getToken(GpslParser.ADD, i);
		}
		public List<TerminalNode> SUB() { return getTokens(GpslParser.SUB); }
		public TerminalNode SUB(int i) {
			return getToken(GpslParser.SUB, i);
		}
		public List<TerminalNode> SUB_ASSIGNMENT() { return getTokens(GpslParser.SUB_ASSIGNMENT); }
		public TerminalNode SUB_ASSIGNMENT(int i) {
			return getToken(GpslParser.SUB_ASSIGNMENT, i);
		}
		public List<TerminalNode> ADD_ASSIGNMENT() { return getTokens(GpslParser.ADD_ASSIGNMENT); }
		public TerminalNode ADD_ASSIGNMENT(int i) {
			return getToken(GpslParser.ADD_ASSIGNMENT, i);
		}
		public AddContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add; }
	}

	public final AddContext add() throws RecognitionException {
		AddContext _localctx = new AddContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_add);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			mul();
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADD) | (1L << SUB) | (1L << ADD_ASSIGNMENT) | (1L << SUB_ASSIGNMENT))) != 0)) {
				{
				setState(177);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ADD:
					{
					setState(169);
					match(ADD);
					setState(170);
					mul();
					}
					break;
				case SUB:
					{
					setState(171);
					match(SUB);
					setState(172);
					mul();
					}
					break;
				case SUB_ASSIGNMENT:
					{
					setState(173);
					match(SUB_ASSIGNMENT);
					setState(174);
					mul();
					}
					break;
				case ADD_ASSIGNMENT:
					{
					setState(175);
					match(ADD_ASSIGNMENT);
					setState(176);
					mul();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MulContext extends ParserRuleContext {
		public List<UnaryContext> unary() {
			return getRuleContexts(UnaryContext.class);
		}
		public UnaryContext unary(int i) {
			return getRuleContext(UnaryContext.class,i);
		}
		public List<TerminalNode> MUL() { return getTokens(GpslParser.MUL); }
		public TerminalNode MUL(int i) {
			return getToken(GpslParser.MUL, i);
		}
		public List<TerminalNode> DIV() { return getTokens(GpslParser.DIV); }
		public TerminalNode DIV(int i) {
			return getToken(GpslParser.DIV, i);
		}
		public List<TerminalNode> DIV_ASSIGNMENT() { return getTokens(GpslParser.DIV_ASSIGNMENT); }
		public TerminalNode DIV_ASSIGNMENT(int i) {
			return getToken(GpslParser.DIV_ASSIGNMENT, i);
		}
		public List<TerminalNode> MUL_ASSIGNMENT() { return getTokens(GpslParser.MUL_ASSIGNMENT); }
		public TerminalNode MUL_ASSIGNMENT(int i) {
			return getToken(GpslParser.MUL_ASSIGNMENT, i);
		}
		public MulContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mul; }
	}
